--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^8.1.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
