--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "db:setup": "mysql -u username -p password < /path/to/your/file.sql ",
     "start": "nodemon server/server.js",
     "build": "webpack --watch"
   },
