--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Baseball Statistics Database",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "db:setup": "mysql -u username -p password < /path/to/your/file.sql ",
     "start": "nodemon server/server.js",
     "build": "webpack --watch"
@@ -24,7 +24,10 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "jquery": "^3.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
